--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-scroll-parallax": "^2.3.5",
+    "react-sticky": "^6.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
