--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.1",
     "react-scroll-parallax": "^2.3.5",
     "react-sticky": "^6.0.3",
     "web-vitals": "^0.2.4"
